# asio-qt-chat

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_sent.cpp  message_sent.h  server  server.cpp  ui_mainwindow.h
backend/: client
client/: client.cpp  client.h  main_window.cpp
frontend/: input_field.cpp  input_field.h  send_messages.cpp  send_messages.h
server/: main.cpp  main_window.cpp  main_window.h  server.cpp  server.h
